tests/errors/runtime.UncaughtError.1.art
print 2/3
print 2/2
print 2/1
print 2/0
print 3/1
print 3/2